# etf-dislocations

./: .gitignore  Makefile  README.md  SPEC.md  pyproject.toml  requirements.txt
config/: data_sources.yaml  regression_spec.yaml  settings.yaml  stress_rules.yaml  stress_windows.yaml  universe.yaml
data/fixtures/: README.md  stress_windows.yaml  vix.csv
data/fixtures/nav/: EFA.csv  HYG.csv  LQD.csv  SPY.csv  TLT.csv
data/fixtures/prices/: EFA.csv  HYG.csv  LQD.csv  SPY.csv  TLT.csv
docs/: data_notes.md  etf_data_availability.csv  live_data_audit.md
scripts/: make_fixtures.py
src/etf_dislocations/: __init__.py  cli.py  config.py  freeze.py  logging_utils.py  panel.py  universe.py
src/etf_dislocations/analysis/: event_study.py  mean_reversion.py  panel_regression.py  robustness.py
src/etf_dislocations/data/: ingest_nav.py  ingest_prices.py  ingest_vix.py  loaders.py
src/etf_dislocations/dislocation/: premium_discount.py  stale_pricing.py
src/etf_dislocations/liquidity/: metrics.py  spread_estimators.py  turnover.py
src/etf_dislocations/reporting/: figures.py  tables.py
tests/integration/: test_fixture_pipeline.py  test_run_all.py
tests/unit/: test_config.py  test_event_study.py  test_freeze.py  test_ingest.py  test_liquidity.py  test_loaders.py  test_mean_reversion.py  test_panel.py  test_panel_regression.py  test_premium_discount.py  test_reporting.py  test_robustness.py  test_spread_estimators.py  test_stale_pricing.py  test_stress_apply.py  test_tier1_events.py  test_tier2_rule.py  test_turnover.py  test_universe.py
(+3 files in other folders)
