[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-dislocations"
version = "0.1.0"
description = "ETF premium/discount dislocations, arbitrage frictions, and liquidity stress"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "PyYAML>=6.0",
    "requests>=2.31",
    "pandas_market_calendars>=4.3",
    "matplotlib>=3.8",
    "linearmodels>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
etf-dislocations = "etf_dislocations.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
